Added homepage with categories

--- a/store/static/store/store.css
+++ b/store/static/store/store.css
@@ -1,3 +1,74 @@
-.heading{
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.heading {
     text-align: center;
+}
+
+#category-container {
+    width: 90%;
+    margin: 30px auto 30px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.inner-category-container {
+    flex: 300px;
+}
+
+
+.inner-category-container img {
+    width: 100%;
+}
+
+.inner-category-container a {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+}
+
+.inner-category-container h4 {
+    text-align: center;
+    margin-top: 5px;
+}
+
+
+@media(min-width: 768px) {
+    #category-container {
+        width: 90%;
+        margin: 30px auto 30px auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 35px;
+    }
+
+    .inner-category-container {
+        flex: 300px;
+    }
+
+
+    .inner-category-container img {
+        width: 100%;
+    }
+
+    .inner-category-container a {
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+    }
+
+    .inner-category-container h4 {
+        text-align: center;
+        margin-top: 5px;
+    }
+
+
+
+
 }
