--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -5,7 +5,16 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="heading">Home</h1>
+<h1 class="heading">Categories</h1>
+<section id="category-container">
+    {% for i in categories %}
+    <div class="inner-category-container">
+        <img src="{{i.category_image.url}}" alt="Category image">
+        <h4>{{i.category_name}}</h4>
+        <a href="#">{{i.category_description}}</a>
+    </div>
+    {% endfor %}
+</section>
 {% endblock %}
 
 {% block scripts %}
