Added individual products page

--- a/store/static/store/store.css
+++ b/store/static/store/store.css
@@ -5,14 +5,16 @@
 
 .heading {
     text-align: center;
+    padding: 20px;
 }
+
+/*Home*/
 
 #category-container {
     width: 90%;
     margin: 30px auto 30px auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -68,7 +70,131 @@
         margin-top: 5px;
     }
 
+}
+
+/*categories*/
+
+#products-container{
+    width: 90%;
+    margin: 30px auto 30px auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 
 
+.product-container img{
+    width: 100%;
+}
 
+.product-container h4{
+    text-align: center;
+    margin-top: 5px;
+}
+
+.product-container p{
+    text-align: center
+}
+
+.product-container a{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+}
+
+@media(min-width: 768px){
+    #products-container{
+        width: 90%;
+        margin: 30px auto 30px auto;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .product-container{
+        width: 350px;
+    }
+    
+    
+    .product-container img{
+        width: 100%;
+        height: 250px;
+    }
+    
+    .product-container h4{
+        text-align: center;
+        margin-top: 5px;
+    }
+    
+    .product-container p{
+        text-align: center
+    }
+    
+    .product-container a{
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+/*Individual product*/
+
+
+.grid-container{
+    display: grid;
+    grid-template-columns: 90%;
+    justify-content: center;
+    justify-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.grid-container img{
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.grid-container p{
+    justify-self: start;
+}
+
+.grid-container form{
+    justify-self: start;
+}
+
+.button{
+    width: 200px;
+    padding: 7px;
+}
+
+@media(min-width: 768px){
+    .grid-container{
+        display: grid;
+        grid-template-columns: 40%;
+        justify-content: center;
+        justify-items: center;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .grid-container img{
+        width: 100%;
+        padding-bottom: 10px;
+    }
+    
+    .grid-container p{
+        justify-self: start;
+    }
+    
+    .grid-container form{
+        justify-self: start;
+    }
+    
+    .button{
+        width: 250px;
+        padding: 7px;
+    }
 }
