--- a/store/templates/store/categories.html
+++ b/store/templates/store/categories.html
@@ -6,14 +6,20 @@
 
 {% block content %}
 <h1 class="heading">{{category.category_name}}</h1>
+<section id="products-container">
 {% for i in products %}
-<h4>{{i.product_name}}</h4>
-<p>{{i.product_description}}</p>
-<p>{{i.product_price}}</p>
+
+
+    <div class="product-container">
+        <img src="{{i.product_image.url}}" alt="A natur image">
+        <h4>{{i.product_name}}</h4>
+        <p>{{i.price_with_vat}}kr</p>
+        <a href="{% url 'ind_products' i.id %}">To details</a>
+    </div>
 
 
 {% endfor %}
-
+</section>
 {% endblock %}
 
 {% block scripts %}
