--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
+                    <a class="nav-link" href="{% url 'add_cart' %}"><i class="fas fa-shopping-bag"></i></a>
                 </li>
                 {% if request.user.is_authenticated %}
                 <li class="nav-item">
